erreur corrigée image

--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -42,6 +42,7 @@
         android:id="@+id/imageView"
         android:layout_width="410dp"
         android:layout_height="390dp"
+        android:contentDescription="@string/samere"
         tools:srcCompat="@tools:sample/avatars[3]" />
 
 
